--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -60,10 +60,11 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/app.js"></script>
-    <!-- Socket.IO client -->
-    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
     
+    <!-- Socket.IO client -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
+    <!-- Main JS -->
+    <script src="/static/js/app.js"></script>
 
 </body>
 </html>
